--- a/app/src/main/res/layout/activity_textshowmore.xml
+++ b/app/src/main/res/layout/activity_textshowmore.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.animator.hu.myapplicationobjectanimator.MainActivity">
+    tools:context="com.hu.ui.MainActivity">
 
     <TextView
         android:id="@+id/textcustom"
