--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hu.ui.MainActivity">
+    tools:context="com.animator.hu.myapplicationobjectanimator.MainActivity">
 
     <!--<com.animator.hu.myapplicationobjectanimator.AnimatorView-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="match_parent"/>-->
-    <com.hu.customview.CustomTimeShowView
+    <com.animator.hu.myapplicationobjectanimator.CustomTimeShowView
         android:layout_width="match_parent"
         android:layout_height="210dp"
         app:rectBoldWidth="4dp"
